# test_task

./: .gitignore  CMakeLists.txt  Castle.cpp  Castle.hpp  ChessBoard.cpp  ChessBoard.hpp  Position.cpp  Position.hpp  README.md  main.cpp
